kubernetes/Int/deployments/media/sonarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sonarr
    namespace: media
spec:
    replicas: 1
    progressDeadlineSeconds: 600
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: sonarr
    template:
        metadata:
            labels:
                app: sonarr
        spec:
            containers:
                - name: sonarr
                  image: linuxserver/sonarr:4.0.9
                  resources:
                    limits:
                        memory: 8Gi
                        cpu: 5000m
                    requests:
                        memory: 100Mi
                        cpu: 100m
                  volumeMounts:
                    - name: pvc
                      mountPath: /config
                    - name: media
                      mountPath: /PlexMedia
            volumes:
                - name: pvc
                  persistentVolumeClaim:
                    claimName: sonarr
                - name: media
                  nfs:
                    server: 172.16.1.10
                    path: /mnt/BigPool/Media
