kubernetes/Int/deployments/media/sonarr/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: sonarr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:amYNnXQMPAfFVImhlOUivZtWNF7hYA==,iv:IO5Ft9vV6kd+fqodhY82xzYy1EIX5Yj/SzSC/2xBp8w=,tag:TtlE+tXkkbI8cvYWSxgmJg==,type:str]
          kind: Rule
          priority: 10
          middlewares:
            - name: forwardauth-authentik
              namespace: network
          services:
            - name: sonarr
              port: 8989
        - match: ENC[AES256_GCM,data:rl+SIsE9fxkfced8Qr8WxdXNrKV+cgOa8FkCkBRJF6oj5sPrcvGrHaOjC7nXNeio/HVxvhDhpzKqxsIxzIZYgGc=,iv:JIbOfS2JCl7dvPgntv28sM/waqUUliAxAIjIzjMrqPE=,tag:lJrvEGiEb5qgrvt8ukk8OQ==,type:str]
          kind: Rule
          priority: 15
          services:
            - name: sonarr
              port: 8989
        - match: ENC[AES256_GCM,data:Tx97KKi70LBq7/4iV2jfs4gj2xigp/0PNP8=,iv:/DKYAQKHrx/C56CZr4wjBzgNzABZ4VLK9btjtPOpf/g=,tag:yVKumS1TO2JQWuOlX/WWEw==,type:str]
          kind: Rule
          services:
            - name: sonarr
              port: 8989
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArYStqNWFEYXU3Yml1Y1Ju
[...]
            l+1ONKlgKvEUDnF7MTUgUM/XpEH4KbWLsbivzeZopnxgfuPQMF0Tew==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-16T13:31:33Z"
    mac: ENC[AES256_GCM,data:l560wBSOY+pWNE9PVUl2wE/+vjo0G3zVYLEgoDGvtUWd/OdqDdCSaN2BhcIPADFbk/i6xD+JZk0xn2FxxW7hlCJ2VLt2vvR7RoXS5uWafsOKWRA4+OZW1zzo/JLN1/20LpQr64XYsOqsB1ucnorDL1bFp7nNcrlt8vs7nav2WF4=,iv:YOYc+ADx16nofy3E3bPLqU5CnAa7seb5Y4dre8DrcMY=,tag:2GtK5PKlCtN3EpQ621oWNQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
